# PLY-PARSER

./: CMakeLists.txt  README.md
include/: File.h  PlyFile.h
src/: File.cpp  PlyFile.cpp  main.cpp
